--- a/po/wesnoth-editor/nl.po
+++ b/po/wesnoth-editor/nl.po
@@ -9,43 +9,40 @@ msgstr ""
 "Project-Id-Version: wesnoth-editor\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2019-01-21 21:29+0300\n"
-"PO-Revision-Date: 2010-12-27 17:53+0100\n"
+"PO-Revision-Date: 2019-03-13 08:26+0100\n"
 "Last-Translator: Alexander van Gessel <ai0867@gmail.com>\n"
 "Language-Team: Dutch <AI0867@gmail.com>\n"
 "Language: nl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Poedit-Language: Dutch\n"
-"X-Generator: KBabel 1.11.4\n"
+"X-Generator: Poedit 2.2.1\n"
 "X-Poedit-Basepath: /home/koan/wesnoth\n"
 
 #. [brush]: id=brush-1
 #: data/core/editor/brushes.cfg:6
 msgid "Single Hex"
-msgstr "Enkele hex"
+msgstr "Enkele Tegel"
 
 #. [brush]: id=brush-2
 #: data/core/editor/brushes.cfg:16
 msgid "Radius 1 Hex"
-msgstr "Radius 1 Hex"
+msgstr "Radius 1 Tegel"
 
 #. [brush]: id=brush-3
 #: data/core/editor/brushes.cfg:26
 msgid "Radius 2 Hex"
-msgstr "Radius 2 Hex"
+msgstr "Radius 2 Tegel"
 
 #. [brush]: id=brush-nw-se
 #: data/core/editor/brushes.cfg:47
 msgid "Hex Line NW-SE"
-msgstr "Hex lijn NW-ZO"
+msgstr "Tegel Lijn NW-ZO"
 
 #. [brush]: id=brush-sw-ne
 #: data/core/editor/brushes.cfg:63
-#, fuzzy
-#| msgid "Hex Line NW-SE"
 msgid "Hex Line SW-NE"
-msgstr "Hex lijn NW-ZO"
+msgstr "Tegel Lijn NW-ZO"
 
 #. [editor_group]: id=all
 #: data/core/editor/terrain-groups.cfg:11
@@ -80,7 +77,7 @@ msgstr "bos"
 #. [editor_group]: id=fall
 #: data/core/editor/terrain-groups.cfg:52
 msgid "fall"
-msgstr ""
+msgstr "herfst"
 
 #. [editor_group]: id=frozen
 #: data/core/editor/terrain-groups.cfg:59
@@ -126,59 +123,57 @@ msgstr "speciaal"
 #. Describes a scenario in the editor that has not set a time of day schedule
 #: data/core/editor/time-of-day.cfg:6
 msgid "time of day^None"
-msgstr ""
+msgstr "Geen"
 
 #. [editor_times]: id=test
 #: data/core/editor/time-of-day.cfg:11
 msgid "Test"
-msgstr ""
+msgstr "Test"
 
 #. [editor_times]: id=default
 #: data/core/editor/time-of-day.cfg:22
 msgid "Default"
-msgstr ""
+msgstr "Standaard"
 
 #. [editor_times]: id=summer
 #: data/core/editor/time-of-day.cfg:28
 msgid "Summer"
-msgstr ""
+msgstr "Zomer"
 
 #. [editor_times]: id=winter
 #: data/core/editor/time-of-day.cfg:34
 msgid "Winter"
-msgstr ""
+msgstr "Winter"
 
 #. [editor_times]: id=underground
 #: data/core/editor/time-of-day.cfg:40
 msgid "Underground"
-msgstr ""
+msgstr "Ondergronds"
 
 #. [editor_times]: id=deep_underground
 #: data/core/editor/time-of-day.cfg:46
 msgid "Deep Underground"
-msgstr ""
+msgstr "Diep Ondergronds"
 
 #. [editor_times]: id=indoors
 #: data/core/editor/time-of-day.cfg:52
 msgid "Indoors"
-msgstr ""
+msgstr "Binnen"
 
 #. [editor_times]: id=24
 #: data/core/editor/time-of-day.cfg:58
 msgid "24 Hour Schedule"
-msgstr ""
+msgstr "24 Uur Schema"
 
 #. [editor_times]: id=after_the_fall
 #: data/core/editor/time-of-day.cfg:64
 msgid "After the Fall"
-msgstr ""
+msgstr "Na de Herfst"
 
 #. [theme]: id=editor
 #: data/themes/editor.cfg:11
-#, fuzzy
-#| msgid "Quit Editor"
 msgid "theme^Editor"
-msgstr "Editor verlaten"
+msgstr "Editor"
 
 #. [menu]: id=menu-editor-file, type=turbo
 #: data/themes/editor.cfg:61
@@ -188,7 +183,7 @@ msgstr "Bestand"
 #. [menu]: id=menu-editor-recent
 #: data/themes/editor.cfg:72
 msgid "Load Recent"
-msgstr ""
+msgstr "Recente Laden"
 
 #. [menu]: id=menu-editor-map
 #: data/themes/editor.cfg:90
@@ -198,12 +193,12 @@ msgstr "Kaart"
 #. [menu]: id=menu-unit-facing
 #: data/themes/editor.cfg:98
 msgid "Unit Facing"
-msgstr ""
+msgstr "Eenheid gezichtsrichting"
 
 #. [menu]: id=menu-editor-transitions
 #: data/themes/editor.cfg:104
 msgid "Transition Update"
-msgstr ""
+msgstr "Transitie Update"
 
 #. [menu]: id=menu-editor-window
 #: data/themes/editor.cfg:111
@@ -213,22 +208,22 @@ msgstr "Venster"
 #. [menu]: id=menu-editor-areas
 #: data/themes/editor.cfg:120
 msgid "Areas"
-msgstr ""
+msgstr "Gebieden"
 
 #. [menu]: id=menu-editor-local-time
 #: data/themes/editor.cfg:128
 msgid "Assign Local Time"
-msgstr ""
+msgstr "Lokale Tijd Toewijzen"
 
 #. [menu]: id=menu-editor-local-schedule
 #: data/themes/editor.cfg:134
 msgid "Assign Local Time Schedule"
-msgstr ""
+msgstr "Lokaal Tijd Schema Toewijzen"
 
 #. [menu]: id=menu-editor-side
 #: data/themes/editor.cfg:142
 msgid "Side"
-msgstr ""
+msgstr "Kant"
 
 #. [label]: id=villages-icon
 #: data/themes/editor.cfg:159
@@ -238,46 +233,46 @@ msgstr "dorpen"
 #. [label]: id=units-icon
 #: data/themes/editor.cfg:175
 msgid "units"
-msgstr ""
+msgstr "eenheden"
 
 #. [menu]: id=switch_time
 #: data/themes/editor.cfg:454
 msgid "Time Schedule Menu"
-msgstr ""
+msgstr "Tijd Schema Menu"
 
 #. [menu]: id=menu-playlist
 #: data/themes/editor.cfg:465
 msgid "Playlist"
-msgstr ""
+msgstr "Afspeellijst"
 
 #. [menu]: id=menu-editor-schedule
 #: data/themes/editor.cfg:471
 msgid "Assign Time Schedule"
-msgstr ""
+msgstr "Wijs Tijd Schema Toe"
 
 #: src/editor/action/mouse/mouse_action_unit.cpp:62
 msgid "Identifier: "
-msgstr ""
+msgstr "Identificatie: "
 
 #: src/editor/action/mouse/mouse_action_unit.cpp:63
 msgid "Name: "
-msgstr ""
+msgstr "Naam: "
 
 #: src/editor/action/mouse/mouse_action_unit.cpp:64
 msgid "Type: "
-msgstr ""
+msgstr "Soort: "
 
 #: src/editor/action/mouse/mouse_action_unit.cpp:65
 msgid "Level: "
-msgstr ""
+msgstr "Rang: "
 
 #: src/editor/action/mouse/mouse_action_unit.cpp:66
 msgid "Cost: "
-msgstr ""
+msgstr "Kosten: "
 
 #: src/editor/action/mouse/mouse_action_unit.cpp:67
 msgid "Recruit: "
-msgstr ""
+msgstr "Rekruteren: "
 
 #: src/editor/controller/editor_controller.cpp:178
 msgid "Fatal error"
@@ -288,16 +283,12 @@ msgid "Do you really want to quit?"
 msgstr "Wilt u echt afsluiten?"
 
 #: src/editor/controller/editor_controller.cpp:210
-#, fuzzy
-#| msgid ""
-#| "Do you really want to quit? Changes in the map since the last save will "
-#| "be lost."
 msgid ""
 "Do you really want to quit? Changes to this map since the last save will be "
 "lost."
 msgstr ""
-"Wilt u echt afsluiten? Wijzigingen van de kaart sinds de laatste save gaan "
-"verloren."
+"Wil je echt afsluiten? Wijzigingen van de kaart sinds de laatste keer "
+"opslaan gaan verloren."
 
 #: src/editor/controller/editor_controller.cpp:212
 msgid ""
@@ -313,55 +304,47 @@ msgstr "Geen editor tijd-van-dag gevonden."
 
 #: src/editor/controller/editor_controller.cpp:1147
 msgid "Change Unit ID"
-msgstr ""
+msgstr "Verander Eenheid ID"
 
 #: src/editor/controller/editor_controller.cpp:1148
 msgid "ID:"
-msgstr ""
+msgstr "ID:"
 
 #: src/editor/controller/editor_controller.cpp:1164
 msgid "Rename Unit"
-msgstr ""
+msgstr "Hernoem Eenheid"
 
 #: src/editor/controller/editor_controller.cpp:1165
 msgid "Name:"
-msgstr ""
+msgstr "Naam:"
 
 #: src/editor/map/context_manager.cpp:205
 msgid "Load Map"
-msgstr ""
+msgstr "Laad Kaart"
 
 #: src/editor/map/context_manager.cpp:273 src/editor/map/map_context.cpp:838
-#, fuzzy
-#| msgid "(New Map)"
 msgid "New Map"
-msgstr "(Nieuwe kaart)"
+msgstr "Nieuwe Kaart"
 
 #: src/editor/map/context_manager.cpp:286 src/editor/map/map_context.cpp:838
-#, fuzzy
-#| msgid "(New Map)"
 msgid "New Scenario"
-msgstr "(Nieuwe kaart)"
+msgstr "Nieuw Scenario"
 
 #: src/editor/map/context_manager.cpp:342
 msgid "No Recent Files"
-msgstr ""
+msgstr "Geen Recente Bestanden"
 
 #: src/editor/map/context_manager.cpp:380
-#, fuzzy
-#| msgid "(New Map)"
 msgid "Unnamed Area"
-msgstr "(Nieuwe kaart)"
+msgstr "Naamloos Gebied"
 
 #: src/editor/map/context_manager.cpp:411
-#, fuzzy
-#| msgid "(New Map)"
 msgid "New Side"
-msgstr "(Nieuwe kaart)"
+msgstr "Nieuwe Kant"
 
 #: src/editor/map/context_manager.cpp:467
 msgid "Apply Mask"
-msgstr ""
+msgstr "Pas Masker Toe"
 
 #: src/editor/map/context_manager.cpp:476
 msgid "Error loading mask"
@@ -369,11 +352,11 @@ msgstr "Fout bij het laden van het masker"
 
 #: src/editor/map/context_manager.cpp:496
 msgid "Identifier:"
-msgstr ""
+msgstr "Identificatie:"
 
 #: src/editor/map/context_manager.cpp:496
 msgid "Rename Area"
-msgstr ""
+msgstr "Hernoem Gebied"
 
 #: src/editor/map/context_manager.cpp:510
 msgid "Choose Target Map"
@@ -385,16 +368,12 @@ msgid "Error loading map"
 msgstr "Fout bij het laden van de kaart"
 
 #: src/editor/map/context_manager.cpp:645
-#, fuzzy
-#| msgid "Save the Map As"
 msgid "Save Map As"
-msgstr "Sla de kaart op als"
+msgstr "Sla Kaart Op Als"
 
 #: src/editor/map/context_manager.cpp:666
-#, fuzzy
-#| msgid "Save the Map As"
 msgid "Save Scenario As"
-msgstr "Sla de kaart op als"
+msgstr "Sla Scenario Op Als"
 
 #: src/editor/map/context_manager.cpp:698
 msgid "No random map generators found."
@@ -410,30 +389,21 @@ msgid "Unsaved Changes"
 msgstr "Onopgeslagen wijzigingen"
 
 #: src/editor/map/context_manager.cpp:732
-#, fuzzy
-#| msgid ""
-#| "Do you want to discard all changes you made to the map since the last "
-#| "save?"
 msgid "Do you want to discard all changes made to the map since the last save?"
-msgstr ""
-"Wilt u alle wijzigingen sinds u laatst de kaart opsloeg ongedaan maken?"
+msgstr "Wilt u alle wijzigingen sinds de laatste keer opslaan ongedaan maken?"
 
 #: src/editor/map/context_manager.cpp:788
-#, fuzzy
-#| msgid "This map is already open."
 msgid "This scenario is already open."
-msgstr "Deze kaart is al open"
+msgstr "Dit scenario is al geopend."
 
 #: src/editor/map/context_manager.cpp:811
 #: src/editor/map/context_manager.cpp:874
 msgid "This map is already open."
-msgstr "Deze kaart is al open"
+msgstr "Deze kaart is al geopend."
 
 #: src/editor/map/context_manager.cpp:835
-#, fuzzy
-#| msgid "Map saved."
 msgid "Scenario saved."
-msgstr "Kaart opgeslagen."
+msgstr "Scenario opgeslagen."
 
 #: src/editor/map/context_manager.cpp:850
 msgid "Map saved."
@@ -459,7 +429,7 @@ msgstr ""
 #: src/editor/map/editor_map.cpp:148
 #: src/editor/palette/location_palette.cpp:119
 msgid "Player $side_num"
-msgstr ""
+msgstr "Speler $side_num"
 
 #: src/editor/map/editor_map.cpp:283
 msgid "The size of the target map is different from the current map"
@@ -470,10 +440,8 @@ msgid "File not found"
 msgstr "Bestand niet gevonden"
 
 #: src/editor/map/map_context.cpp:152
-#, fuzzy
-#| msgid "Empty map file"
 msgid "Empty file"
-msgstr "Leeg kaartbestand"
+msgstr "Leeg bestand"
 
 #: src/editor/map/map_context.cpp:208
 msgid ""
@@ -484,10 +452,8 @@ msgstr ""
 "naar een bestaand bestand"
 
 #: src/editor/map/map_context.cpp:604
-#, fuzzy
-#| msgid "Could not save the map: $msg"
 msgid "Could not save the scenario: $msg"
-msgstr "Kaart opslaan mislukt: $msg"
+msgstr "Opslaan van scenario mislukt: $msg"
 
 #: src/editor/map/map_context.cpp:639
 msgid "Could not save into scenario"
@@ -499,7 +465,7 @@ msgstr "Kaart opslaan mislukt: $msg"
 
 #: src/editor/palette/editor_palettes.cpp:51
 msgid "(Unknown Group)"
-msgstr ""
+msgstr "(Onbekende Groep)"
 
 #: src/editor/palette/editor_palettes.cpp:284
 msgid "(non-core)"
@@ -511,15 +477,15 @@ msgstr "Zal niet in het spel werken zonder extra werk."
 
 #: src/editor/palette/location_palette.cpp:256
 msgid "Go To"
-msgstr ""
+msgstr "Ga Naar"
 
 #: src/editor/palette/location_palette.cpp:263
 msgid "Add"
-msgstr ""
+msgstr "Voeg Toe"
 
 #: src/editor/palette/location_palette.cpp:265
 msgid "New Location Identifier"
-msgstr ""
+msgstr "Nieuwe Locatie Identificatie"
 
 #: src/editor/palette/location_palette.cpp:272
 msgid "Error"
@@ -527,11 +493,11 @@ msgstr "Fout"
 
 #: src/editor/palette/location_palette.cpp:273
 msgid "Invalid location id"
-msgstr ""
+msgstr "Ongeldige locatie id"
 
 #: src/editor/palette/location_palette.cpp:280
 msgid "Delete"
-msgstr ""
+msgstr "Verwijder"
 
 #: src/editor/palette/terrain_palettes.cpp:231
 msgid "FG: "
@@ -543,27 +509,23 @@ msgstr "AG: "
 
 #: src/gui/dialogs/editor/custom_tod.cpp:137
 msgid "Clipboard support not found, contact your packager"
-msgstr ""
+msgstr "Klembordondersteuning niet gevonden, neem contact op met packager"
 
 #: src/gui/dialogs/editor/custom_tod.cpp:201
-#, fuzzy
-#| msgid "Choose player"
 msgid "Choose File"
-msgstr "Kies speler"
+msgstr "Kies Bestand"
 
 #: src/gui/dialogs/editor/custom_tod.cpp:202
 msgid "Select"
-msgstr ""
+msgstr "Selecteer"
 
 #: src/gui/dialogs/editor/set_starting_position.cpp:84
-#, fuzzy
-#| msgid "(Player)^None"
 msgid "player^None"
 msgstr "Geen"
 
 #: src/gui/dialogs/editor/set_starting_position.cpp:97
 msgid "Player $player_number"
-msgstr ""
+msgstr "Speler $player_number"
 
 #~ msgid "(New Map)"
 #~ msgstr "(Nieuwe kaart)"
