--- a/po/wesnoth/nl.po
+++ b/po/wesnoth/nl.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: Battle for Wesnoth\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2019-03-11 16:10+0300\n"
-"PO-Revision-Date: 2019-03-08 10:16+0100\n"
+"PO-Revision-Date: 2019-03-13 10:07+0100\n"
 "Last-Translator: Merijn de Vet <merijndevet@hotmail.com>\n"
 "Language-Team: Dutch <merijndevet@hotmail.com>\n"
 "Language: nl\n"
@@ -5210,7 +5210,7 @@ msgstr "<i>― Koningin Asheviere, 503YW</i>"
 #: data/tips.cfg:257
 msgid "Using lower-level units can be very cost-effective."
 msgstr ""
-"Het gebruik van eenheden van een lage rank kan erg kostenbesparend werken."
+"Het gebruik van eenheden van een lage rang kan erg kostenbesparend werken."
 
 #. [tip]
 #: data/tips.cfg:261
@@ -5219,7 +5219,7 @@ msgid ""
 "<i>Cures</i>, or <i>Nightstalk</i>. Obtaining those units early can make a "
 "big difference in a campaign."
 msgstr ""
-"Sommige eenheden met een hogere rank hebben belangrijke vaardigheden zoals "
+"Sommige eenheden met een hogere rang hebben belangrijke vaardigheden zoals "
 "<i>Leiderschap</i>, <i>Geneest</i>, of <i>Nachtzicht</i>. Wanneer deze "
 "eenheden vroeg in de veldtocht beschikbaar worden kan dit voor een groot "
 "verschil zorgen."
@@ -5245,10 +5245,8 @@ msgstr ""
 #. between multiple advancements of a unit, this text is sent to
 #. other players. It will be embedded within a message.
 #: src/actions/advancement.cpp:225
-#, fuzzy
-#| msgid "an advancement choice"
 msgid "waiting for^an advancement choice"
-msgstr "een promotie keuze"
+msgstr "het kiezen van een promotie"
 
 #: src/actions/attack.cpp:602 src/actions/attack.cpp:1349
 msgid "An invalid attacker weapon got selected."
@@ -6306,35 +6304,29 @@ msgid " This server disallows unregistered nicknames."
 msgstr " Deze server staat geen ongeregistreerde bijnamen toe."
 
 #: src/game_initialization/multiplayer.cpp:332
-#, fuzzy
-#| msgid "The nickname ‘$nick’ is banned on this server’s forums."
 msgid "The nickname ‘$nick’ is banned on this server’s forums for $duration|."
-msgstr "De bijnaam '$nick' is verbannen van deze server forums."
+msgstr ""
+"De bijnaam '$nick' is verbannen van deze server forums voor $duration|."
 
 #: src/game_initialization/multiplayer.cpp:334
 msgid "The nickname ‘$nick’ is banned on this server’s forums."
 msgstr "De bijnaam '$nick' is verbannen van deze server forums."
 
 #: src/game_initialization/multiplayer.cpp:338
-#, fuzzy
-#| msgid "Your IP address is banned on this server’s forums."
 msgid "Your IP address is banned on this server’s forums for $duration|."
-msgstr "Je IP-adres is verbannen van deze server forums."
+msgstr "Je IP-adres is verbannen van deze server forums voor duration."
 
 #: src/game_initialization/multiplayer.cpp:340
 msgid "Your IP address is banned on this server’s forums."
 msgstr "Je IP-adres is verbannen van deze server forums."
 
 #: src/game_initialization/multiplayer.cpp:344
-#, fuzzy
-#| msgid ""
-#| "The email address for the nickname ‘$nick’ is banned on this server’s "
-#| "forums."
 msgid ""
 "The email address for the nickname ‘$nick’ is banned on this server’s forums "
 "for $duration|."
 msgstr ""
-"Het e-mailadres voor de bijnaam '$nick' is verbannen van de server forums."
+"Het e-mailadres voor de bijnaam '$nick' is verbannen van de server forums "
+"voor $duration|."
 
 #: src/game_initialization/multiplayer.cpp:346
 msgid ""
@@ -7034,10 +7026,8 @@ msgid "You have no units available to recruit."
 msgstr "Er zijn geen eenheden beschikbaar om te rekruteren."
 
 #: src/menu_events.cpp:282
-#, fuzzy
-#| msgid "No unit recalled"
 msgid "No unit recruited"
-msgstr "Geen eenheid opgeroepen"
+msgstr "Geen eenheid gerekruteerd"
 
 #: src/menu_events.cpp:314
 msgid "You do not have enough gold to recruit that unit"
@@ -7525,7 +7515,7 @@ msgstr "Terrein met bewegingskosten van minder dan 1 waargenomen."
 #. from another player. This text will be embedded into a sentence.
 #: src/persist_var.cpp:58
 msgid "waiting for^a global variable"
-msgstr ""
+msgstr "een wereldwijde variabele"
 
 #: src/play_controller.cpp:242
 msgid "time left for current turn"
@@ -7664,7 +7654,7 @@ msgstr "Type: "
 
 #: src/reports.cpp:235
 msgid "Side:"
-msgstr ""
+msgstr "Kant:"
 
 #: src/reports.cpp:257
 msgid "Level: "
@@ -7769,16 +7759,12 @@ msgid "Defense: "
 msgstr "Verdediging: "
 
 #: src/reports.cpp:620 src/reports.cpp:621
-#, fuzzy
-#| msgid "vision: "
 msgid "vision:"
-msgstr "zicht: "
+msgstr "zicht:"
 
 #: src/reports.cpp:625 src/reports.cpp:626
-#, fuzzy
-#| msgid "Warning: "
 msgid "jamming:"
-msgstr "Waarschuwing:"
+msgstr "storing:"
 
 #: src/reports.cpp:655
 msgid "Movement Costs:"
@@ -7875,16 +7861,12 @@ msgstr[0] "Aanval"
 msgstr[1] "Aanvallen"
 
 #: src/reports.cpp:1144
-#, fuzzy
-#| msgid "Time of day: "
 msgid "Time of day schedule:"
-msgstr "Tijd van de dag: "
+msgstr "Tijd van de dag schema:"
 
 #: src/reports.cpp:1176
-#, fuzzy
-#| msgid "Time of day: "
 msgid "Time of day:"
-msgstr "Tijd van de dag: "
+msgstr "Tijd van de dag:"
 
 #: src/reports.cpp:1177 src/reports.cpp:1219
 msgid "Lawful units: "
@@ -8286,7 +8268,7 @@ msgstr[1] "wachten op $desc van $sides kanten"
 #. This text will be embedded into a sentence.
 #: src/synced_user_choice.hpp:42
 msgid "waiting for^input"
-msgstr ""
+msgstr "input"
 
 #: src/terrain/terrain.cpp:181
 msgid "Allied village"
