--- a/po/wesnoth-anl/de.po
+++ b/po/wesnoth-anl/de.po
@@ -5,7 +5,7 @@ msgstr ""
 "Project-Id-Version: Battle for Wesnoth 1.12\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2018-09-16 07:03 UTC\n"
-"PO-Revision-Date: 2018-06-12 21:02+0200\n"
+"PO-Revision-Date: 2019-04-07 23:14+0200\n"
 "Last-Translator: Nils Kneuper <crazy-ivanovic  AT gmx  D O  T net>\n"
 "Language-Team: irc://irc.freenode.net/#wesnoth-de\n"
 "Language: de_DE\n"
@@ -13,7 +13,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Poedit 2.0.7\n"
+"X-Generator: Poedit 2.2.1\n"
 
 #. [multiplayer]: id=multiplayer_A_New_Land
 #: data/multiplayer/scenarios/4p_A_New_Land.cfg:4
@@ -28,10 +28,7 @@ msgid ""
 msgstr ""
 "Dies ist ein Überlebensszenario für 4 Spieler, in welchem es Euch ermöglicht "
 "wird Gebäude zu bauen und die Landschaft umzuformen. Empfohlene Einstellung: "
-"100 Gold als Startkapital\n"
-"\n"
-"Hinweis: Ihr müsst die Voreinstellungen nutzen, da das Szenario sonst nicht "
-"korrekt funktioniert."
+"100 Gold als Startkapital."
 
 #. [part]
 #: data/multiplayer/scenarios/4p_A_New_Land.cfg:26
